# AustralianHazaras

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  update-census-data.yml  validate.yml
schemas/: article.schema.json  categories.schema.json  census.schema.json  cities.schema.json  site.schema.json
src/: census-night-2026.ics
src/assets/css/: shared.css
src/assets/css/bundles/: article.min.css  census.min.css  home.min.css
src/assets/css/components/: city-content.css  city-selector.css
src/assets/css/core/: base.css  tokens.css
src/assets/css/layout/: responsive.css  site-shell.css
src/assets/css/pages/: article.css  census.css  home.css
src/assets/js/components/: census.js  city-sections.js  city-selector.js  site-footer.js  site-header.js  site-shell.js
src/assets/js/icons/: census-benefit-icons.js  city-section-icons.js
src/assets/js/pages/: article-page.js  census-page.js  home-page.js
src/assets/js/services/: data-service.js
src/assets/js/utils/: html.js  page-bootstrap.js  page-error.js  responsive-image.js  shared.js  url-state.js
src/content/: categories.json  census-sources.json  census.json  cities.json  site.json
src/content/articles/: australian-beauty.json  beauty-of-hazaras-in-austrlia.json  hazaragi-beauty.json  welcome-to-australian-hazaras.json
src/templates/pages/: 404.html  article.html  census.html  index.html
src/templates/partials/: footer.html  header.html
tests/: test_build.py  test_census.py  test_content.py
tools/: build.py  images.py  site.py  update_census_data.py  validate_site.py
