[project]
name = "australian-hazaras-site"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["Pillow>=10.4,<12", "jsonschema>=4.23,<5"]

[project.optional-dependencies]
dev = ["pytest>=9.1.1,<10", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
