[project]
name = "australian-hazaras-site"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["Pillow>=10.4,<12", "jsonschema>=4.26.0,<5"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
